📱 Fix overflow problem on < 1440px screens

--- a/assets/sass/app.sass
+++ b/assets/sass/app.sass
@@ -11,6 +11,10 @@
 @import 'components/footer'
 
 // BASE THEME
+html
+  max-width: 100vw
+  overflow-x: hidden
+
 body
   @extend .body
   background-color: $oblivion-1100
